infrastructure/prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: monitoring
  annotations:
      kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  # Use the host you used in your kubernetes Ingress Configurations
  - host: prometheus.192-168-10-42.nip.io
    http:
      paths:
      - backend:
          service:
            name: prometheus-service
            port:
              number: 8080
        path: /
        pathType: Prefix
